# babel

./: Cargo.toml  README.md
examples/: basic.rs  chat.rs  render_raw_stream.rs  sambanova.rs  stream.rs  trait.rs
src/: groq.rs  lib.rs  llm.rs  model.rs  openrouter.rs  utils.rs
src/model/: base.rs  chat.rs  groq.rs  mod.rs  openrouter.rs  sambanova.rs
